--- a/imem/src/app/app.component.html
+++ b/imem/src/app/app.component.html
@@ -1,4 +1,16 @@
-<h1>
-  {{title}}
-  <div id="test">Test</div>
-</h1>
+  <body class="nav-md">
+    <div class="container body">
+      <div class="main_container">
+        <div class="col-md-12">
+          <div class="col-middle">
+            <div class="text-center text-center">
+              <h1 class="error-number">404</h1>
+              <h2>Sorry but we couldn't find this page</h2>
+              <p>This page you are looking for does not exist <a href="#">Report this?</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
